Upgrade to Jekyl 3.x
- Upgrade config and usage of optional gems
- Use Bundler with a Gemfile to lock Jekyll dependencies to the ones provided by GitHub Pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
 # Dependencies
+gems: [jekyll-paginate]
 markdown:            redcarpet
 highlighter:         pygments
 
 # Permalinks
-#
-# Use of `relative_permalinks` ensures post links from the index work properly.
 permalink:           pretty
-relative_permalinks: true
 
 # Setup
 title:               Clippings Geeks
@@ -15,7 +13,6 @@ description:         'Engineering & design blog sharing insights about building 
 url:                 http://clippings.github.io
 github:              https://github.com/clippings
 clippings:           https://clippings.com
-baseurl:             /
 paginate:            5
 
 # About/contact
