--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,26 @@
 # Dependencies
-gems: [jekyll-paginate]
-markdown:            redcarpet
-highlighter:         pygments
+gems:        [jekyll-paginate]
 
 # Permalinks
-permalink:           pretty
+permalink:   /:title
 
 # Setup
-title:               Clippings Geeks
-tagline:             'Redesigning the design industry'
-description:         'Engineering & design blog sharing insights about building Clippings.com'
-url:                 https://clippings.github.io
-github:              https://github.com/clippings
-clippings:           https://clippings.com
-paginate:            5
+title:       Clippings Geeks
+tagline:     'Redesigning the design industry'
+description: 'Engineering &amp; design blog sharing insights about building Clippings.com'
+url:         https://clippings.github.io
+github:      https://github.com/clippings
+clippings:   https://clippings.com
+baseurl:     ""
+paginate:    5
+exclude:     ["Gemfile", "Gemfile.lock", "README.md", "LICENSE.md"]
+timezone:    Europe/London
 
 # About/contact
 author:
-  name:              Clippings development & design team
-  url:               https://clippings.com
-  email:             hello@clippings.com
+  name:      Clippings development &amp; design team
+  url:       https://clippings.com
+  email:     hello@clippings.com
 
 author_ids: [hkdobrev, dkyosev, phgeorgiev, thomdorkings]
 authors:
