Use generic variables for external website URL and name

--- a/_config.yml
+++ b/_config.yml
@@ -16,4 +16,5 @@ tagline:     'Redesigning the design industry'
 description: 'Engineering &amp; design blog sharing insights about building Clippings.com'
 url:         https://clippings.github.io
 github:      https://github.com/clippings
-clippings:   https://clippings.com
+website:     https://clippings.com
+websiteName: Clippings.com
