--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:   /:title
 # Setup
 baseurl:     ""
 paginate:    5
-exclude:     ["Gemfile", "Gemfile.lock", "README.md", "LICENSE.md"]
+exclude:     [Gemfile, Gemfile.lock, README.md, LICENSE.md, vendor]
 timezone:    Europe/London
 
 # Site variables
