--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ branches:
   - gh-pages
   - master
 
+notifications:
+  slack:
+    rooms:
+      secure: DipTNbWwBeaRHQMrsmGg3oKBrjbzCczpHg7ZsXTEmXq/6sXYr8ISjxT21VJYDyE7yD/NcQr39CP66OaL6jUighhTMrtBlka7//kvqCFRoRBa65NANC06XT4/3tYNzCvDPQbVfA3/Ikkbyck2xaWmSrl1W6iyDVV4hhr6umnpukA=
+
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation
