--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Dependencies
-gems:        [jekyll-paginate]
+gems:        [jekyll-paginate, jekyll-sitemap]
 
 # Permalinks
 permalink:   /:title
