--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ _site
 .ruby-version
 .jekyll-metadata
 
+# Used by HTML proofer
+/tmp/
+
 # Numerous always-ignore extensions
 *.diff
 *.err
@@ -39,5 +42,5 @@ validation-status.json
 validation-report.json
 
 # Folders to ignore
-node_modules
-bower_components
+/node_modules
+/bower_components
