--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:   /:title
 # Setup
 baseurl:     ""
 paginate:    5
-exclude:     [Gemfile, Gemfile.lock, README.md, LICENSE.md, vendor]
+exclude:     [Gemfile, Gemfile.lock, README.md, LICENSE.md, vendor, clippings.github.io.sublime-project]
 timezone:    Europe/London
 
 # Site variables
